[workspace]
resolver = "2"
members = [
    "vecdecque-demo","rust-vec-demo", "linked-list-demo", "cli-fruit-salad", "hash-map-frequency-counter", "hashMap-custom-metric-example", "graph-based-analysis", "hashSet-unique-fruits", "bTreeset-rust-example", "binary-heap-example",
    # ...other members...
]
